--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -11,3 +11,5 @@ COPY requirements.txt /tmp/
 
 # requirements.txtにリストされたパッケージをインストール
 RUN pip install -r /tmp/requirements.txt
+
+RUN chainlit run app.py
